--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,22 +10,32 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
         </activity>
 
-        <service android:name=".WeatherService"></service>
+        <service android:name=".WeatherService"/>
         <service
             android:name=".SinaSsoAuthService"
             android:exported="true"
             android:label="@string/app_name"
             android:process=":remote">
             <intent-filter>
-                <action android:name="com.example.administrator.servicedemo"></action>
+                <action android:name="com.example.administrator.servicedemo"/>
             </intent-filter>
         </service>
+
+        <activity android:name=".BroadCastActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+        <receiver android:name=".HelloBroadcastReceiver">
+            <intent-filter>
+                <action android:name="hello"></action>
+            </intent-filter>
+        </receiver>
     </application>
+
 </manifest>
